--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <title>water</title>
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport"/>
+    <style>
+      #app{
+        min-height: 100vh;
+      }
+    </style>
   </head>
   <body>
     <div id="app">
